Suggest rather than require react/zmq

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     "require": {
         "php": ">=5.4.0",
 		"cboden/ratchet": "0.3.*",
-		"react/zmq": "0.3.*"
+    },
+    "suggest": {
+        "react/zmq": "Allows pushing messages form server to client. v0.3.* recommended."
     },
     "autoload": {
         "psr-0": {
