--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require": {
         "cupoftea/package": "~1.0",
         "php": ">=5.4.0",
-        "cboden/ratchet": "dev-master"
+        "cboden/ratchet": "master"
     },
     "suggest": {
         "react/zmq": "Allows pushing messages form server to client. v0.3.* recommended."
