this should just work

--- a/composer.json
+++ b/composer.json
@@ -11,22 +11,14 @@
     ],
     "repositories": [
         {
-            "type": "package",
-            "package": {
-                "version": "master",
-                "name": "cboden/ratchet",
-                "source": {
-                    "url": "https://github.com/CupOfTea696/Ratchet.git",
-                    "type": "git",
-                    "reference": "master"
-                }
-            }
+            "type": "vcs",
+            "url": "https://github.com/CupOfTea696/Ratchet"
         }
     ],
     "require": {
         "cupoftea/package": "~1.0",
         "php": ">=5.4.0",
-        "cboden/ratchet": "master"
+        "cboden/ratchet": "dev-master"
     },
     "suggest": {
         "react/zmq": "Allows pushing messages form server to client. v0.3.* recommended."
