--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         }
     ],
     "require": {
-        "cupoftea/package": "~1.0",
+        "cupoftea/package": "~1.1.3",
         "php": ">=5.4.0",
-        "cboden/ratchet": "dev-master"
+        "cboden/ratchet": "dev-master#0924a917b15c4d1cf0f2cc25b4be115ce61dd1af"
     },
     "suggest": {
         "react/zmq": "Allows pushing messages form server to client. v0.3.* recommended."
