--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "cupoftea/package": "~1.1.3",
         "php": ">=5.4.0",
-        "cboden/ratchet": "dev-master#0924a917b15c4d1cf0f2cc25b4be115ce61dd1af"
+        "cboden/ratchet": "dev-master#0924a917b15c4d1cf0f2cc25b4be115ce61dd1af as v0.4.0"
     },
     "suggest": {
         "react/zmq": "Allows pushing messages form server to client. v0.3.* recommended."
