--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ project:
     github: "https://github.com/CupOfTea696/TwoStream/"
     package: "cupoftea/twostream"
 navigation:
+  - name: Documentation
+    link: "docs"
   - name: API
     link: "docs/api"
 url: "http://127.0.0.1:4000"
