--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,36 @@
 
 project:
     name: "TwoStream <sup>{{ Beta }}</sup>"
+    alt_name: "TwoStream"
     tagline: Two-way communication between Laravel and the Client
+    author: "CupOfTea696"
     github: "https://github.com/CupOfTea696/TwoStream/"
     package: "cupoftea/twostream"
 navigation:
   - name: Documentation
     link: "docs"
+    navigation:
+      - name: Getting Started
+        type: category
+      - name: Installation
+        type: page
+        link: "installation"
+      - name: Configuration
+        type: page
+        link: "configuration"
+      - name: Running TwoStream
+        type: page
+        link: "server"
+      - name: The Basics
+        type: category
+      - name: Routing
+        type: page
+        link: "routing"
+      - name: Services
+        type: category
   - name: API
     link: "docs/api"
-url: "http://twostream.cupoftea.io"
+url: "http://127.0.0.1:4000"
 twitter_username: CupOfTea696
 github_username:  CupOfTea696
 
