--- a/_config.yml
+++ b/_config.yml
@@ -36,14 +36,20 @@ twitter_username: CupOfTea696
 github_username:  CupOfTea696
 
 # Build settings
+  - octopress-minify-html
 markdown: redcarpet
 redcarpet:
-  extensions: ['with_toc_data']
+  extensions: ['with_toc_data', 'html_toc']
 highlighter: pygments
 pygments_options: ['startinline']
-sass:
-  sass_dir: 'assets/sass'
-  style: :compressed
-  sourcemap: :auto
 gems:
-  - octopress-minify-html
+  - nokogiri
+assets:
+  dirname: assets
+  base_url: assets/
+  cachebust: soft
+  js_compressor: uglifier
+  css_compressor: sass
+  gzip: [ text/css, application/javascript ]
+  sources:
+    - _assets
