--- a/_config.yml
+++ b/_config.yml
@@ -34,14 +34,14 @@ navigation:
         type: category
   - name: API
     url: "docs/api"
-url: "http://twostream.cupoftea.io"
+url: "http://127.0.0.1:4000"
 twitter_username: CupOfTea696
 github_username:  CupOfTea696
 
 # Build settings
 markdown: redcarpet
 redcarpet:
-  extensions: ['with_toc_data', 'html_toc']
+  extensions: ['no_intra_emphasis', 'with_toc_data', 'html_toc', 'strikethrough', 'autolink', 'tables', 'footnotes', 'underline']
 highlighter: pygments
 pygments_options: ['startinline']
 gems:
