--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ navigation:
         type: category
   - name: API
     url: "docs/api"
-url: "http://127.0.0.1:4000"
+url: "http://twostream.cupoftea.io"
 twitter_username: CupOfTea696
 github_username:  CupOfTea696
 
