--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "cupoftea/package": "~1.1.3",
         "php": ">=5.4.0",
-        "cboden/ratchet": "dev-master"
+        "cboden/ratchet": "dev-master as v0.3.x"
     },
     "suggest": {
         "react/zmq": "Allows pushing messages form server to client. v0.3.* recommended."
