--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
     "name": "cupoftea/twostream",
-    "description": "Two-way communication between Laravel and your Client using WebSockets",
+    "description": "The WebSocket server for Laravel",
     "keywords": ["socket", "websocket", "laravel", "communication", "client-server communication"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Sven Wittevrongel",
+            "name": "CupOfTea696",
             "email": "cupoftea696@gmail.com"
         }
     ],
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=5.4.0",
         "cupoftea/package": "~1.2.0",
-        "cupoftea/chain": "~1.1.0",
+        "cupoftea/chain": "~1.2.0",
         "cboden/ratchet": "~0.3.3"
     },
     "suggest": {
